# TacPythonLib

PythonLib/: README.md  buf.gen.yaml  debug_interface.py  pyproject.toml  test_radio.py  test_send.py
PythonLib/examples/: basic_usage.py
PythonLib/lora_mesh_tak/: __init__.py  client.py  slip.py
PythonLib/lora_mesh_tak/proto/: __init__.py
PythonLib/lora_mesh_tak/proto/v1/: __init__.py  common.proto  common_pb2.py  config.proto  config_pb2.py  geographic.proto  geographic_pb2.py  messages.proto  messages_pb2.py  metrics.proto  metrics_pb2.py  routing.proto  routing_pb2.py  serial.proto  serial_pb2.py
